fix : createComment Service 파라미터값 수정